<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/sc1" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:id="@id/rl1" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="30.0dip" android:textStyle="bold" android:id="@id/textWelcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dwelcome" android:layout_centerHorizontal="true" />
            <TextView android:gravity="fill" android:id="@id/textIntro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dintro" android:layout_below="@id/textWelcome" android:layout_alignParentLeft="true" />
            <Button android:id="@id/d1button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d1" android:layout_below="@id/textIntro" android:layout_alignParentLeft="true" android:layout_alignParentRight="false" android:layout_centerVertical="true" android:onClick="startChallenge" />
            <Button android:id="@id/d2button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d2" android:layout_below="@id/d1button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d3button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d3" android:layout_below="@id/d2button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d4button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d4" android:layout_below="@id/d3button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d5button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d5" android:layout_below="@id/d4button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d6button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d6" android:layout_below="@id/d5button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d7button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d7" android:layout_below="@id/d6button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d8button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d8" android:layout_below="@id/d7button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d9button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d9" android:layout_below="@id/d8button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d10button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d10" android:layout_below="@id/d9button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d11button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d11" android:layout_below="@id/d10button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d12button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d12" android:layout_below="@id/d11button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
            <Button android:id="@id/d13button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d13" android:layout_below="@id/d12button" android:layout_alignParentLeft="true" android:onClick="startChallenge" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>