<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="fill" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hardcode_intro" android:layout_alignParentTop="true" />
    <EditText android:id="@id/hcKey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hardcode_enter" android:ems="10" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:inputType="text" />
    <Button android:id="@id/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardcode_access" android:layout_below="@id/hcKey" android:layout_alignParentLeft="false" android:layout_centerHorizontal="true" android:onClick="access" />
</RelativeLayout>